--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="User\" />
+  </ItemGroup>
+
 </Project>
